--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,7 +42,8 @@
     --secondary-color-1: #feef4c;
     --primary-color-2: #1a2517;
     --secondary-color-2: #c0dfb5;
-    --accent-color: #5B43FF;
+    /* --accent-color: #5B43FF; */
+    --accent-color: #FEFC00;
 
     /* font variables */
     /* --primary-font: "Raligo", sans-serif; */
