Hero pinning animation done

--- a/frontend/src/components/About/About.scss
+++ b/frontend/src/components/About/About.scss
@@ -1,6 +1,7 @@
 #about {
     background: var(--secondary-color);
     color: var(--primary-color);
+    border-radius: 18px 18px 0 0;
 
     .container {
         .about-row {
