--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,7 +46,7 @@ html {
     --primary-color-2: #1a2517;
     --secondary-color-2: #c0dfb5;
     --accent-color: #05011d40;
-    --accent-color-2: #5b43ff;
+    --accent-color-2: #f39c12;
     /* --accent-color: #FEFC00; */
 
     /* font variables */
