--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -39,7 +39,7 @@
   display: block;
   width: 18px; 
   height: 2px;
-  background-color: var(--accent-color);
+  background-color: var(--accent-color-2);
   border-radius: 2px;
   position: relative;
   transition: all 0.3s ease;
